Fix all text being too close to the edge of circle

--- a/src/Components/Clock/Clock.scss
+++ b/src/Components/Clock/Clock.scss
@@ -16,6 +16,7 @@ img {
 
 .container-1 {
   color: $light-theme-text;
+  width: 65vmin;
   //   border: 2px solid red;
 }
 
